assignment-initial/src/main/crazy/parser/.antlr/Cra2PreParser.py
# Generated from c://Users//hp450//Desktop//assignment2-initial//src//main//crazy//parser//Cra2Pre.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Cra2PreParser ( Parser ):

    grammarFileName = "Cra2Pre.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'var'", "'begin'", "'end'", 
                     "'boolean'", "'integer'", "'real'", "'string'", "'const'", 
                     "'and'", "'continue'", "'of'", "'then'", "'array'", 
                     "'div'", "'function'", "'or'", "'do'", "'if'", "'loop'", 
                     "'procedure'", "'break'", "'else'", "'mod'", "'while'", 
                     "'not'", "':='", "'='", "'<>'", "'.'", "','", "';'", 
                     "':'", "'['", "']'", "'('", "')'", "'+'", "'-'", "'*'", 
                     "'/'", "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "VAR", "BEGIN", "END", "BOOLEAN", 
                      "INTEGER", "REAL", "STRING", "CONST", "AND", "CONTINUE", 
                      "OF", "THEN", "ARRAY", "DIV", "FUNCTION", "OR", "DO", 
                      "IF", "LOOP", "PROCEDURE", "BREAK", "ELSE", "MOD", 
                      "WHILE", "NOT", "ASSOPE", "EQUAL", "DIFF", "DOT", 
                      "COMMA", "SEMICOLON", "COLON", "LS", "RS", "LR", "RR", 
                      "ADD", "SUB", "MUL", "DIVV", "LESS", "GREATER", "LE", 
                      "GE", "INTEGER_LIT", "REAL_LIT", "BOOLEAN_LIT", "STRING_LIT", 
                      "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_var_decl_part = 1
    RULE_var_decl_list = 2
    RULE_var_const_decl = 3
    RULE_var_decl = 4
    RULE_id_list = 5
    RULE_const_decl = 6
    RULE_func_decl_part = 7
    RULE_func_decl_list = 8
    RULE_func_procedure_decl = 9
    RULE_func_decl = 10
    RULE_procedure_decl = 11
    RULE_param_list = 12
    RULE_params = 13
    RULE_param = 14
    RULE_one_param = 15
    RULE_mul_param = 16
    RULE_ctype = 17
    RULE_primitive_type = 18
    RULE_array_type = 19
    RULE_array_size_list = 20
    RULE_array_size = 21
    RULE_stmt_list = 22
    RULE_stmts = 23
    RULE_stmt = 24
    RULE_assign_stmt = 25
    RULE_lhs = 26
    RULE_block_stmt = 27
    RULE_if_stmt = 28
    RULE_call_stmt = 29
    RULE_call_expr = 30
    RULE_while_stmt = 31
    RULE_do_while_stmt = 32
    RULE_loop_do_stmt = 33
    RULE_break_stmt = 34
    RULE_continue_stmt = 35
    RULE_expr_list = 36
    RULE_exprs = 37
    RULE_expr = 38
    RULE_expr2 = 39
    RULE_expr3 = 40
    RULE_expr4 = 41
    RULE_expr5 = 42
    RULE_expr6 = 43
    RULE_expr7 = 44
    RULE_expr_8 = 45
    RULE_expr8 = 46
    RULE_expr9 = 47
    RULE_index_operators = 48
    RULE_index_op = 49
    RULE_array_literal = 50
    RULE_array_element_list = 51
    RULE_array_elements = 52
    RULE_array_element = 53
    RULE_literal = 54

    ruleNames =  [ "program", "var_decl_part", "var_decl_list", "var_const_decl", 
                   "var_decl", "id_list", "const_decl", "func_decl_part", 
                   "func_decl_list", "func_procedure_decl", "func_decl", 
                   "procedure_decl", "param_list", "params", "param", "one_param", 
                   "mul_param", "ctype", "primitive_type", "array_type", 
                   "array_size_list", "array_size", "stmt_list", "stmts", 
                   "stmt", "assign_stmt", "lhs", "block_stmt", "if_stmt", 
                   "call_stmt", "call_expr", "while_stmt", "do_while_stmt", 
                   "loop_do_stmt", "break_stmt", "continue_stmt", "expr_list", 
                   "exprs", "expr", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr_8", "expr8", "expr9", "index_operators", 
                   "index_op", "array_literal", "array_element_list", "array_elements", 
                   "array_element", "literal" ]

    EOF = Token.EOF
    PROGRAM=1
    VAR=2
    BEGIN=3
    END=4
    BOOLEAN=5
    INTEGER=6
    REAL=7
    STRING=8
    CONST=9
    AND=10
    CONTINUE=11
    OF=12
    THEN=13
    ARRAY=14
    DIV=15
    FUNCTION=16
    OR=17
    DO=18
    IF=19
    LOOP=20
    PROCEDURE=21
    BREAK=22
    ELSE=23
    MOD=24
    WHILE=25
    NOT=26
    ASSOPE=27
    EQUAL=28
    DIFF=29
    DOT=30
    COMMA=31
    SEMICOLON=32
    COLON=33
    LS=34
    RS=35
    LR=36
    RR=37
    ADD=38
    SUB=39
    MUL=40
    DIVV=41
    LESS=42
    GREATER=43
    LE=44
    GE=45
    INTEGER_LIT=46
    REAL_LIT=47
    BOOLEAN_LIT=48
    STRING_LIT=49
    ID=50
    LINE_COMMENT=51
    BLOCK_COMMENT=52
    WS=53
    ERROR_CHAR=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.v = None # Var_decl_partContext
            self.f = None # Func_decl_partContext
            self.b = None # Block_stmtContext

        def PROGRAM(self):
            return self.getToken(Cra2PreParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(Cra2PreParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(Cra2PreParser.SEMICOLON, 0)

        def DOT(self):
            return self.getToken(Cra2PreParser.DOT, 0)

        def EOF(self):
            return self.getToken(Cra2PreParser.EOF, 0)

        def var_decl_part(self):
            return self.getTypedRuleContext(Cra2PreParser.Var_decl_partContext,0)


        def func_decl_part(self):
            return self.getTypedRuleContext(Cra2PreParser.Func_decl_partContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(Cra2PreParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_program




    def program(self):

        localctx = Cra2PreParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(Cra2PreParser.PROGRAM)
            self.state = 111
            self.match(Cra2PreParser.ID)
            self.state = 112
            self.match(Cra2PreParser.SEMICOLON)
            self.state = 113
            localctx.v = self.var_decl_part()
            self.state = 114
            localctx.f = self.func_decl_part()
            self.state = 115
            localctx.b = self.block_stmt()
            self.state = 116
            self.match(Cra2PreParser.DOT)
            self.state = 117
            self.match(Cra2PreParser.EOF)
            localctx.s = "[[" + localctx.v.s + "],[" + localctx.f.s + "]," + localctx.b.s + "]. " 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.v = None # Var_decl_listContext

        def var_decl_list(self):
            return self.getTypedRuleContext(Cra2PreParser.Var_decl_listContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_var_decl_part




    def var_decl_part(self):

        localctx = Cra2PreParser.Var_decl_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl_part)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                localctx.v = self.var_decl_list()
                localctx.s = ",".join(localctx.v.results)
                pass
            elif token in [3, 16, 21]:
                self.enterOuterAlt(localctx, 2)
                localctx.s = ''
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.results = None
            self.vc1 = None # Var_const_declContext
            self.vl = None # Var_decl_listContext
            self.vc2 = None # Var_const_declContext

        def var_const_decl(self):
            return self.getTypedRuleContext(Cra2PreParser.Var_const_declContext,0)


        def var_decl_list(self):
            return self.getTypedRuleContext(Cra2PreParser.Var_decl_listContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_var_decl_list




    def var_decl_list(self):

        localctx = Cra2PreParser.Var_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl_list)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                localctx.vc1 = self.var_const_decl()
                self.state = 127
                localctx.vl = self.var_decl_list()
                localctx.results = [localctx.vc1.s] + localctx.vl.results
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                localctx.vc2 = self.var_const_decl()
                localctx.results = [localctx.vc2.s]
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.v = None # Var_declContext
            self.c = None # Const_declContext

        def var_decl(self):
            return self.getTypedRuleContext(Cra2PreParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(Cra2PreParser.Const_declContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_var_const_decl




    def var_const_decl(self):

        localctx = Cra2PreParser.Var_const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_const_decl)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                localctx.v = self.var_decl()
                localctx.s=localctx.v.s
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                localctx.c = self.const_decl()
                localctx.s=localctx.c.s
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.l = None # Id_listContext
            self.t = None # CtypeContext

        def VAR(self):
            return self.getToken(Cra2PreParser.VAR, 0)

        def COLON(self):
            return self.getToken(Cra2PreParser.COLON, 0)

        def SEMICOLON(self):
            return self.getToken(Cra2PreParser.SEMICOLON, 0)

        def id_list(self):
            return self.getTypedRuleContext(Cra2PreParser.Id_listContext,0)


        def ctype(self):
            return self.getTypedRuleContext(Cra2PreParser.CtypeContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_var_decl




    def var_decl(self):

        localctx = Cra2PreParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(Cra2PreParser.VAR)
            self.state = 144
            localctx.l = self.id_list()
            self.state = 145
            self.match(Cra2PreParser.COLON)
            self.state = 146
            localctx.t = self.ctype()
            self.state = 147
            self.match(Cra2PreParser.SEMICOLON)
            localctx.s = ",".join(f"var({id},{localctx.t.s})" for id in localctx.l.results)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.results = None
            self._ID = None # Token
            self.l = None # Id_listContext

        def ID(self):
            return self.getToken(Cra2PreParser.ID, 0)

        def COMMA(self):
            return self.getToken(Cra2PreParser.COMMA, 0)

        def id_list(self):
            return self.getTypedRuleContext(Cra2PreParser.Id_listContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_id_list




    def id_list(self):

        localctx = Cra2PreParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                localctx._ID = self.match(Cra2PreParser.ID)
                self.state = 151
                self.match(Cra2PreParser.COMMA)
                self.state = 152
                localctx.l = self.id_list()
                localctx.results = [(None if localctx._ID is None else localctx._ID.text)] + localctx.l.results
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                localctx._ID = self.match(Cra2PreParser.ID)
                localctx.results = [(None if localctx._ID is None else localctx._ID.text)]
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self._ID = None # Token
            self.l = None # LiteralContext

        def CONST(self):
            return self.getToken(Cra2PreParser.CONST, 0)

        def ID(self):
            return self.getToken(Cra2PreParser.ID, 0)

        def EQUAL(self):
            return self.getToken(Cra2PreParser.EQUAL, 0)

        def SEMICOLON(self):
            return self.getToken(Cra2PreParser.SEMICOLON, 0)

        def literal(self):
            return self.getTypedRuleContext(Cra2PreParser.LiteralContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_const_decl




    def const_decl(self):

        localctx = Cra2PreParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(Cra2PreParser.CONST)
            self.state = 160
            localctx._ID = self.match(Cra2PreParser.ID)
            self.state = 161
            self.match(Cra2PreParser.EQUAL)
            self.state = 162
            localctx.l = self.literal()
            self.state = 163
            self.match(Cra2PreParser.SEMICOLON)
            localctx.s = f"const({(None if localctx._ID is None else localctx._ID.text)},{localctx.l.s})"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decl_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.f = None # Func_decl_listContext

        def func_decl_list(self):
            return self.getTypedRuleContext(Cra2PreParser.Func_decl_listContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_func_decl_part




    def func_decl_part(self):

        localctx = Cra2PreParser.Func_decl_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_decl_part)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                localctx.f = self.func_decl_list()
                localctx.s = ",".join(localctx.f.results)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                localctx.s = ''
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.results = None
            self.fp1 = None # Func_procedure_declContext
            self.fdl = None # Func_decl_listContext
            self.fp2 = None # Func_procedure_declContext

        def func_procedure_decl(self):
            return self.getTypedRuleContext(Cra2PreParser.Func_procedure_declContext,0)


        def func_decl_list(self):
            return self.getTypedRuleContext(Cra2PreParser.Func_decl_listContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_func_decl_list




    def func_decl_list(self):

        localctx = Cra2PreParser.Func_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl_list)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                localctx.fp1 = self.func_procedure_decl()
                self.state = 173
                localctx.fdl = self.func_decl_list()
                localctx.results = [localctx.fp1.s] + localctx.fdl.results
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                localctx.fp2 = self.func_procedure_decl()
                localctx.results = [localctx.fp2.s]
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_procedure_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.f = None # Func_declContext
            self.p = None # Procedure_declContext

        def func_decl(self):
            return self.getTypedRuleContext(Cra2PreParser.Func_declContext,0)


        def procedure_decl(self):
            return self.getTypedRuleContext(Cra2PreParser.Procedure_declContext,0)


        def getRuleIndex(self):
            return Cra2PreParser.RULE_func_procedure_decl




    def func_procedure_decl(self):

        localctx = Cra2PreParser.Func_procedure_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_procedure_decl)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                localctx.f = self.func_decl()
                localctx.s=localctx.f.s
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                localctx.p = self.procedure_decl()
                localctx.s=localctx.p.s
                pass
            else:
                raise NoViableAltException(self)
